--- a/IndustrialServices/Views/FacultyMember/Index.cshtml
+++ b/IndustrialServices/Views/FacultyMember/Index.cshtml
@@ -33,13 +33,6 @@
 </script>
 <div class="pagetitle">
     <h1>Faculty Member Data</h1>
-    <nav>
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item">Tables</li>
-            <li class="breadcrumb-item active">Data</li>
-        </ol>
-    </nav>
 </div><!-- End Page Title -->
 
 <section class="section">
@@ -48,7 +41,7 @@
 
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Datatables</h5>
+                    <h5 class="card-title">Faculty Member</h5>
 
                     <button class="btn btn-primary addFacultyMember">+ Add Faculty Member</button>
                     <!-- Table with stripped rows -->
@@ -100,6 +93,24 @@
                     deskripsi_pengajar: deskripsi_pengajar,
                     status: status
                 };
+                if (!(/^\d+$/.test(npk))) {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Warning!',
+                        text: 'NPK must be a numeric value!',
+                    });
+                    return; // Keluar dari fungsi jika NPK bukan angka
+                }
+
+                if (npk == '' || nama_pengajar == '' || bidang_keahlian == '' || deskripsi_pengajar == '') {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Warning!',
+                        text: 'Please fill in all fields!',
+                    });
+                    return; // Keluar dari fungsi jika NPK bukan angka
+                }
+                
 
                 $.ajax({
                     url: url,
@@ -409,7 +420,7 @@
                                         <label for="bidang_keahlian" class="col-sm-2 col-form-label">Areas of expertise</label>
                                         <div class="col-sm-10">
                                             <select type="text" class="form-select" name="bidang_keahlian" id="bidang_keahlian">
-                                            <option>Select Areas of expertise</option>
+                                            <option value="">Select Areas of expertise</option>
                                                 <option value="Technical">Technical</option>
                                             <option value="Non-Technical">Non-Technical</option>
                                                                                         <option value="Technical and Non-Technical">Technical & Non-Technical</option>
