--- a/IndustrialServices/Views/Home/DetailFacultyMember.cshtml
+++ b/IndustrialServices/Views/Home/DetailFacultyMember.cshtml
@@ -2,4 +2,263 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "Faculty Member's Profile";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<input value="@ViewBag.id_pengajar" hidden />
+<section id="hero">
+    <section id="home" class="home">
+        <div class="container" style="padding-bottom:15px;">
+            <p style="margin-bottom: -3px;font-family:Barlow;color:darkgray;">Industrial Services</p>
+            <div id="load-header-pengajar">
+            </div>
+        </div>
+        <div class="container-lg">
+            <div class="row g-12">
+                <div class="col-sm-6 text-white">
+                    <div class="post-body">
+                        <h5 style="color: black; font-family:Barlow; font-weight: 600; font-size: 20px; margin-bottom: 20px;">
+                            Faculty Member Description
+                        </h5>
+                        @Html.Raw("<div id='load-detail-pengajar' style='text-align:justify;color:black;font-family:Barlow;'>")
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-6">
+                <div class="card" style="background-color: rgba(0,0,0,0.1);border:none;box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+                    <div class="card-body">
+                        <h5 class="card-title text-black" style="padding:20px; font-family:Barlow; font-size:20px; font-weight:600">Training</h5>
+                        <div class="container mt-5 mb-5">
+                            <div class="row g-4">
+                                <div id="pelatihan">
+                                </div>
+
+
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br />
+        <br />
+    </section>
+</section>
+
+<footer id="footer" style="color:#ffffff;font-family:Barlow;">
+
+    <div class="footer-top" style="background:#01529C;">
+        <div class="container">
+            <div class="row justify-content-center">
+
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3 style="font-family:Barlow;">Astra Polytechnic</h3>
+                    <a href="https://maps.app.goo.gl/xG12byCagHAPUSuY9" target="_blank">
+                        <p style="color:white;font-family:Barlow;">
+                            <strong>Cikarang Campus</strong> <br>
+                            Gaharu Street Block F3 Delta Silicon II, Cibatu,<br>
+                            South Cikarang, Bekasi Regency, <br>
+                            West Java 17530 <br><br>
+
+                            <strong>Sunter Campus</strong> <br>
+                            Astra International Public LLC Complex, Building B,<br>
+                            Gaya Motor Raya Street No. 8, Sunter II, <br>
+                            Jakarta 14330.<br><br>
+
+                        </p>
+                    </a>
+                </div>
+
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3 style="font-family:Barlow;">Time of Service</h3>
+                    <p style="color:white;font-family:Barlow;">
+                        Monday - Friday (08:00 - 16:00)
+                    </p>
+                </div>
+
+                <div class="col-lg-4 col-md-6 footer-contact">
+                    <h3 style="font-family:Barlow;">Information</h3>
+                    <div class="row">
+                        <a>
+                            <p style="color:white;font-family:Barlow;">
+                                About Industrial Services <br />
+                                Astra Polytechnic Main Website <br />  <br />
+                            </p>
+                        </a>
+                        <h3>Contacts</h3>
+                        <p style="color:white;font-family:Barlow;">
+                            Call Center : (021) 5022722 <br />
+                            WhatsApp : 085156842086 (message only) <br />
+                            Email :  dpp@astrapolytechnic.ac.id <br /> <br />
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-12 d-flex align-items-stretch text-center">
+                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;font-family:Barlow;">Copyright © 2024 Department Training & Production Astra Polytechnic</span>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</footer><!-- End Footer -->
+
+<script>
+    loadFacultyMemberDetails();
+    function loadFacultyMemberDetails() {
+        var id = @ViewBag.id_pengajar;
+        var hostname = "https://localhost:7033/";
+        var url = hostname + "GetFacultyMemberDetails?id=" + id;
+        var method = "GET";
+        loadPelatihan(id);
+        $.ajax({
+            url: url,
+            method: method,
+            contentType: "application/json",
+            success: function (data) {
+                var facultyMember = data.data; // Ganti pelatihanList menjadi pelatihan
+                console.log(data)
+
+                var deskripsiPengajar = '<p style="text-align:justify;">' + facultyMember.deskripsi_pengajar + '</p>';
+
+                var headerRow = '<h5 style="color: black; font-family:Barlow; font-weight: 600; font-size: 32px; margin-bottom: 5px;">Faculty Member\'s Profile</h5>' +
+                    '<div class="col col-md-6" style="font-family:Barlow;">' +
+                    '<div class="card-body p-4">' +
+                    '<div class="d-flex text-black">' +
+                    '<div class="flex-shrink-0">' +
+                    '<img src="/assets/img/' + facultyMember.foto_pengajar + '" alt="Generic placeholder image" class="img-fluid" style="width: 150px; border-radius: 5px;box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);">' +
+                    '</div>' +
+                    '<div class="flex-grow-1 ms-3">' +
+                    '<h5 class="mb-1" style="font-family:Barlow;font-weight:600;font-size:24px;">' + facultyMember.nama_pengajar + '</h5>' +
+                    '<p class="mb-2" style="color: gray;font-family:Barlow;font-size:20px;">' + facultyMember.bidang_keahlian + '</p>' +
+                    '</div>' +
+                    '</div>' +
+                    '</div>' +
+                    '</div>';
+
+                $('#load-header-pengajar').append(headerRow);
+                $('#load-detail-pengajar').append(deskripsiPengajar);
+            },
+            error: function (xhr, status, error) {
+                console.error("Error:", error);
+            }
+        });
+    }
+
+
+
+    function loadPelatihan(id) {
+        var hostname = "https://localhost:7033/";
+        var url = hostname + "GetAllPelatihaninPengajarDetail?id=" + id;
+        var method = "GET";
+
+        // Define the formatDate function
+        function formatDate(dateAwal, dateAkhir) {
+            var options = { day: 'numeric', month: 'long', year: 'numeric' };
+            var awal = new Date(dateAwal);
+            var akhir = new Date(dateAkhir);
+
+            // Jika bulan dan tahunnya sama
+            if (awal.getFullYear() === akhir.getFullYear() && awal.getMonth() === akhir.getMonth()) {
+                options.month = 'long';
+                return awal.getDate() + ' - ' + akhir.toLocaleDateString('en-GB', options);
+            } else {
+                // Jika bulan dan tahunnya berbeda
+                return awal.toLocaleDateString('en-GB', options) + ' - ' + akhir.toLocaleDateString('en-GB', options);
+            }
+        }
+
+        $.ajax({
+            url: url,
+            method: method,
+            contentType: "application/json",
+            success: function (data) {
+                // Hapus data sebelumnya dari container
+                $('#pelatihan').empty();
+
+                var list = data;
+                console.log(data)
+
+                if (list.length > 0) {
+                    list.forEach(function (pelatihan, index) {
+                        $.ajax({
+                            url: hostname + "GetTipePelatihan?id=" + pelatihan.id_tipe_pelatihan,
+                            method: "GET",
+                            contentType: "application/json",
+                            success: function (tipePelatihanDetails) {
+                                var tipe_pelatihan = tipePelatihanDetails.tipe_pelatihan;
+                                $.ajax({
+                                    url: hostname + "GetPelatihanDesk?id=" + pelatihan.id_pelatihan,
+                                    method: "GET",
+                                    contentType: "application/json",
+                                    success: function (desk) {
+                                        var desk_pelatihan = desk.deskripsi_pelatihan;
+                                        var maxTitleLength = 35; // Set the maximum length for the title
+                                        // Truncate the title if it is not null and exceeds the maximum length
+                                        var truncatedTitle = desk_pelatihan && desk_pelatihan.length > maxTitleLength ?
+                                            desk_pelatihan.substring(0, maxTitleLength) + '...' :
+                                            desk_pelatihan;
+                                        var newRow =
+                                            '<div class="col col-md-12" style="padding-bottom:20px;font-family:Barlow;">' +
+                                            '<a class="pelatihan" data-id_pelatihan="' + pelatihan.id_pelatihan + '" style="text-decoration: none; color: inherit;">' +
+                                            '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">' +
+                                            '<div class="card-body p-4">' +
+                                            '<div class="d-flex text-black">' +
+                                            '<div class="flex-shrink-0">' +
+                                            '<img src="/assets/img/' + pelatihan.path_foto_pelatihan + '" alt="Generic placeholder image" class="img-fluid" style="width: 75px; border-radius: 10px;">' +
+                                            '</div>' +
+                                            '<div class="flex-grow-1 ms-3">' +
+                                            '<h5 class="mb-1" style="font-family:Barlow;">' + pelatihan.nama_pelatihan + '</h5>' +
+                                            '<p class="mb-2" style="color: gray;font-family:Barlow;">' + tipe_pelatihan + '</p>' +
+                                            '<p class="mb-1" style="font-family:Barlow;color:rgba(0,0,0,0.4);font-size:14px;">' + formatDate(pelatihan.tanggal_pelatihan_awal, pelatihan.tanggal_pelatihan_akhir) + '</p>' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</a>' +
+                                            '</div>';
+
+                                        $('#pelatihan').append(newRow);
+                                        $('.pelatihan[data-id_pelatihan="' + pelatihan.id_pelatihan + '"]').click(function () {
+                                            var id_pelatihan = $(this).data("id_pelatihan");
+                                            detailPelatihan(id_pelatihan);
+                                        });
+                                    },
+                                    error: function (xhr, status, error) {
+                                        console.error("Error:", error);
+                                    }
+                                });
+                            },
+                            error: function (xhr, status, error) {
+                                console.error("Error:", error);
+                            }
+                        });
+                    });
+                } else {
+                    // Tampilkan pesan atau card khusus jika tidak ada data yang ditemukan
+                    var noDataCard = '<div class="col col-lg-12 justify-content-center" style="padding-bottom:20px;font-family:Barlow;">' +
+                        '<div class="col-12 text-center">' +
+                        '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;">' +
+                        '<div class="card-body p-4">' +
+                        '<p class="mb-2 pb-1 text-center" style="color: gray;">No training available.</p>' +
+                        '</div>' +
+                        '</div>' +
+                        '</div>' +
+                        '</div>';
+
+                    $('#pelatihan').append(noDataCard);
+                }
+            },
+            error: function (xhr, status, error) {
+                console.error("Error:", error);
+            }
+        });
+    }
+</script>
