--- a/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
+++ b/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
@@ -129,7 +129,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link collapsed" asp-action="Index" asp-controller="Login">
+                <a id="logout-link" class="nav-link collapsed" asp-action="Index" asp-controller="Login">
                     <i class="ri-logout-box-line"></i>
                     <span>Logout</span>
                 </a>
@@ -166,5 +166,25 @@
 </html>
 
 <script>
+    $(document).ready(function () {
+        $("#logout-link").click(function (e) {
+            e.preventDefault(); // Mencegah pengalihan langsung
 
+            // Tampilkan konfirmasi SweetAlert
+            Swal.fire({
+                title: 'Logout',
+                text: 'Are you sure want to logout?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, logout!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Pindah halaman setelah konfirmasi
+                    window.location.href = '@Url.Action("Index", "Login")'; // Sesuaikan dengan rute logout Anda
+                }
+            });
+        });
+    });
 </script>
