--- a/IndustrialServices/Views/TestiCM/Index.cshtml
+++ b/IndustrialServices/Views/TestiCM/Index.cshtml
@@ -195,7 +195,14 @@
         var hostname = "https://localhost:7033/"; // Ganti dengan URL API Anda
         var url = hostname + "InsertCustomerMapping"; // Sesuaikan dengan endpoint Anda
         var method = "POST";
-
+        if (nama_logo == '' || grade_logo == 0 || logo == null) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Warning!',
+                text: 'Please fill in all fields!',
+            });
+            return; // Keluar dari fungsi jika NPK bukan angka
+        }
         if (logo != null) {
             uploadLogo(logo, function (uniqueFileName) {
                 var input = {
@@ -204,6 +211,8 @@
                     path_logo: uniqueFileName,
                     status: status
                 };
+
+
                 $.ajax({
                     url: url,
                     method: method,
@@ -410,16 +419,19 @@
 
 
         var foto = document.getElementById("foto_peserta").files[0];
-        // Pastikan semua field diisi
-        if (!namaPeserta || !asalInstansi || !testimoni) {
-            alert("Please fill in all fields.");
-            return;
-        }
+        
 
 
         var hostname = "https://localhost:7033/";
         var url = hostname + "InsertTestimony";
-
+        if (namaPeserta == '' || asalInstansi == '' || id_pelatihan == '' || testimoni == '' || foto == null) {
+            Swal.fire({
+                icon: 'error',
+                title: 'Warning!',
+                text: 'Please fill in all fields!',
+            });
+            return; // Keluar dari fungsi jika NPK bukan angka
+        }
 
         if(foto != null) {
             uploadFotoTest(foto, function (uniqueFileName){
@@ -431,6 +443,7 @@
                     foto_peserta: uniqueFileName, // Ganti URL default gambar profil
             status: 1 // Status aktif, sesuaikan dengan kebutuhan
         };
+
         // Kirim data testimonial ke server
         $.ajax({
             url: url, // Ganti URL dengan endpoint yang sesuai
@@ -540,7 +553,7 @@
                                     <label for="bidang_keahlian" class="col-sm-2 col-form-label">Grade Logo</label>
                                     <div class="col-sm-10">
                                         <select type="text" class="form-select" name="grade_logo" id="grade_logo">
-                                            <option>Select Grade of Logo</option>
+                                            <option value=0>Select Grade of Logo</option>
                                             <option value=1>1</option>
                                             <option value=2>2</option>
                                             <option value=3>3</option>
