--- a/IndustrialServices/Views/TipePelatihan/Index.cshtml
+++ b/IndustrialServices/Views/TipePelatihan/Index.cshtml
@@ -205,7 +205,14 @@
             status: status_tipe_pelatihan
         };
         var data = JSON.stringify(input);
-
+        if (tipe_pelatihan == '' || bidang_keahlian == '') {
+            Swal.fire({
+                icon: 'error',
+                title: 'Warning!',
+                text: 'Please fill in all fields!',
+            });
+            return; // Keluar dari fungsi jika NPK bukan angka
+        }
         $.ajax({
             url: url,
             method: method,
@@ -250,7 +257,14 @@
             bidang_keahlian: bidang_keahlian,
             status: status_tipe_pelatihan
         };
-
+        if (tipe_pelatihan == '' || bidang_keahlian == '') {
+            Swal.fire({
+                icon: 'error',
+                title: 'Warning!',
+                text: 'Please fill in all fields!',
+            });
+            return; // Keluar dari fungsi jika NPK bukan angka
+        }
         var data = JSON.stringify(input);
 
         $.ajax({
@@ -307,7 +321,7 @@
                                     <label for="bidang_keahlian" class="col-sm-2 col-form-label">Areas of expertise</label>
                                     <div class="col-sm-10">
                                         <select type="text" class="form-select" name="bidang_keahlian" id="bidang_keahlian">
-                                            <option>Select Areas of expertise</option>
+                                            <option value="">Select Areas of expertise</option>
                                             <option value="Technical">Technical</option>
                                             <option value="Non-Technical">Non-Technical</option>
                                         </select>
@@ -363,7 +377,7 @@
                                     <label for="edit_bidang_keahlian" class="col-sm-2 col-form-label">Areas of expertise</label>
                                     <div class="col-sm-10">
                                         <select type="text" class="form-select" name="edit_bidang_keahlian" id="edit_bidang_keahlian">
-                                            <option>Select Areas of expertise</option>
+                                            <option value="">Select Areas of expertise</option>
                                             <option value="Technical">Technical</option>
                                             <option value="Non-Technical">Non-Technical</option>
                                         </select>
